200-SYSOPS/Labs/LabStack-2ff18e01..yaml
AWSTemplateFormatVersion: 2010-09-09

Description: "Lab 2 of SysOps"

Resources:

  EC2EnforcerStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: !Sub https://${AWS::Region}-tcprod.s3.amazonaws.com/courses/aws-tc-lab-enforcer/ec2/yml/ec2_enforcer.yml
      Parameters:
        S3Bucket: !Sub '${AWS::Region}-tcprod'
        S3CodePath: "courses/aws-tc-lab-enforcer/ec2/zipped_code"
        AllowedRegions: !Sub '${AWS::Region}'
        MaxInstances: "5"

###########
# Lab Network Structure
###########
  LabVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      InstanceTenancy: "default"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: "Name"
          Value: "LabVPC"

  RouteTable:
    Type: "AWS::EC2::RouteTable"
    DependsOn: Subnet1
    Properties:
      VpcId: !Ref LabVPC

  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn:
      - GatewayAttach
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW

  RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DependsOn: PublicRoute
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref RouteTable

  Subnet1:
    Type: "AWS::EC2::Subnet"
    DependsOn: GatewayAttach
    Properties:
      VpcId: !Ref LabVPC
      CidrBlock: "10.0.0.0/24"
      AvailabilityZone: !Select
        - 0
        - !GetAZs
  IGW:
    Type: "AWS::EC2::InternetGateway"

  GatewayAttach:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref LabVPC
      InternetGatewayId: !Ref IGW

  AppServerSG:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "SG that allows inbound http traffic to AppServers"
      GroupName: "AppServerSG"
      VpcId: !Ref LabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

###########
# IAM ReadOnly Group for QL
###########
Outputs:
  LabVPCOutput:
    Description: "Lab VPC Id"
    Value: !Ref LabVPC
    Export:
      Name: LabVPCOutput

  LabRegion:
    Description: "The AWS Region this Lab was created in"
    Value: !Ref AWS::Region
    Export:
      Name: "LabRegion"

  LabSubnetOutput:
    Description: "Public Subnet for the Lab"
    Value: !Ref Subnet1
    Export:
      Name: LabSubnetOutput

  AppSGOutput:
    Description: "A Security Group for App Servers to use"
    Value: !Ref AppServerSG
    Export:
      Name: AppSGOutput
